Still fixing logo on mobile

--- a/public/sass/main.sass
+++ b/public/sass/main.sass
@@ -212,8 +212,7 @@ p.reserror
     height: 450px
   .logo
     padding-top: 15px
-  .reservation
-    height: 350px
-  .logo
     width: 125px
     height: 49px
+  .reservation
+    height: 350px
